--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,25 +5,202 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Custom CSS -->
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <!-- Fontawesome config -->
-    <script src="https://kit.fontawesome.com/c3c263363b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link rel='stylesheet' href="/styles/myStyle.css" >
 
     <title>Beautiful Pangalengan</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">Pangalengan</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-    
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Activity</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Tourist Attraction</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Gallery</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav justify-content-end">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Sign In <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Sign Up <span class="sr-only">(current)</span></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <div class='container-fluid p-0'>
+        <div class='site-content'>
+          <div class="d-flex justify-content-center">
+            <div class="d-flex flex-column align-items-center text-center">
+              <div class="h1 site-title">
+                Beautiful Pangalengan
+              </div>
+              <hr class='site-hr'>
+              <p class='site-desc'>Where heaven on earth places</p>
+            </div>
+          </div>
+        </div>
+      </div >
+      <div class="section-1">
+        <div class="container text-center">
+          <h1 class="heading-1">
+            Fantastic Beauty
+          </h1>
+          <p class='para-1'>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam officiis reiciendis explicabo molestias blanditiis. Blanditiis vel laudantium, amet dicta expedita modi deleniti explicabo hic vitae obcaecati pariatur, iure ad perspiciatis! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo sequi, eaque dicta soluta quas earum dolorum maiores accusantium nulla, pariatur hic vel aspernatur! Sint quam adipisci at ullam alias quia. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio fugit quod iure perferendis consequatur suscipit, doloribus natus, veritatis repellat, atque fuga! Eveniet commodi, ipsa odit quas neque quos necessitatibus id.</p>
+        </div>
+        <div class='container'>
+          <div class='row align-self-center justify-content-around' data-aos="fade-right" data-aos-duration="1000">
+            <div class="col-12 col-md-3">
+              <div class="d-flex align-self-center justify-content-around">
+                  <div class="card" style="width: 18rem;">
+                    <img src="https://www.knetizen.com/wp-content/uploads/2019/10/IZONE-Jo-Yuri.jpg" class="card-img-top" alt="images">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-3">
+              <div class="d-flex align-self-center justify-content-around">
+                  <div class="card" style="width: 18rem;">
+                    <img src="https://www.knetizen.com/wp-content/uploads/2019/10/IZONE-Jo-Yuri.jpg" class="card-img-top" alt="images">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-3">
+              <div class="d-flex align-self-center justify-content-around">
+                  <div class="card" style="width: 18rem;">
+                    <img src="https://www.knetizen.com/wp-content/uploads/2019/10/IZONE-Jo-Yuri.jpg" class="card-img-top" alt="images">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-3">
+              <div class="d-flex align-self-center justify-content-around">
+                  <div class="card" style="width: 18rem;">
+                    <img src="https://www.knetizen.com/wp-content/uploads/2019/10/IZONE-Jo-Yuri.jpg" class="card-img-top" alt="images">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="section-2">
+        <div class="container">
+          <div class="row align-items-center justify-content-center text-center">
+            <div class="col-12 col-md-6 content order-2 order-md-1">
+              <h1 class='heading-2'>Photo of the Day</h1>
+              <p> Explore more in our gallery</p>
+              <a href='#' class="btn btn-primary">Gallery</a>
+            </div>
+            <div class="col-12 col-md-6 order-1 order-md-2">
+              <img data-aos="fade-left" data-aos-duration="1000" class='img mt-2' src='https://www.knetizen.com/wp-content/uploads/2019/10/IZONE-Jo-Yuri.jpg'>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="section-3">
+        <div class="container">
+          <div class="row align-items-center justify-content-center text-center">
+            <div class="col-12 col-md-6">
+              <img data-aos="fade-right" data-aos-duration="1000" class='img' src='https://www.knetizen.com/wp-content/uploads/2019/10/IZONE-Jo-Yuri.jpg'>
+            </div>
+            <div class="col-12 col-md-6">
+              <h1 class='heading-3'>Why you should visit pangalengan?</h1>
+              <p class = 'param-3'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nobis animi recusandae itaque fugit ducimus illum doloribus nam odio nisi deleniti sit aperiam veritatis doloremque quis, sint tenetur, perspiciatis repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus debitis commodi ad corporis quod consequatur aperiam, aliquid sapiente quas repellat animi culpa, soluta dolor omnis voluptates sit. Cupiditate, eaque obcaecati</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <div class="container-fluid footer">
+        <div class="row justify-content-between align-items-start">
+          <div class="col-12 col-lg-8 order-2 order-lg-1 pb-1">
+            <h4>Contact Us!</h4>
+            <div class="sosmed">
+              <a href='/'>
+                <img src="images/ig.png" alt="ig">
+              </a>
+              <a href='/'>
+                <img src="images/fb.png" alt="ig">
+              </a>
+            </div>
+            <p class='param-footer'>Designed and built with all the love in the world by the Wayang Windu team with the help of our contributors</p>
+            <p class='param-footer'>All right reserved. Pangalengan</p>
+          </div>
+          <div class="col-12 col-lg-4 order-1 order-lg-2 pb-1 justify-content-end">
+            <h4>Our Location</h4>
+            <div class="mapouter">
+              <div class="gmap_canvas">
+                <iframe width="350" height="250" id="gmap_canvas" src="https://maps.google.com/maps?q=pangalengan%20indonesia&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                </iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+
+
+
+        
+      </div>
+    </footer>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
