--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -74,8 +74,8 @@ hr.site-hr {
 }
 
 .section-1 .card {
-	background-color: #f9c49a;
-	border: 3px solid #f9c49a;
+	background-color: #ddc1ab;
+	border: 3px solid #ddc1ab;
 	margin-bottom: 5%;
 }
 
@@ -100,7 +100,7 @@ hr.site-hr {
 .section-2 {
 	margin-top: 5%;
 	padding-bottom: 5%;
-	background-color: #7d3c20;
+	background-color: #443027;
 }
 
 @media (min-width: 768px) {
@@ -114,7 +114,7 @@ hr.site-hr {
 	width: 100%;
 	height: 40%;
 	object-fit: cover;
-	border: 3px solid #f9c49a;
+	border: 3px solid #ddc1ab;
 }
 
 .section-2 .content {
@@ -136,7 +136,7 @@ hr.site-hr {
 }
 
 .section-3 .img {
-	width: 100%;
+	width: 90%;
 	height: 40%;
 	object-fit: cover;
 }
