--- a/views/activity/new.ejs
+++ b/views/activity/new.ejs
@@ -12,7 +12,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel='stylesheet' href="/styles/404.css" >
+    <link rel='stylesheet' href="/styles/about/new.css" >
 
     <title>Beautiful Pangalengan</title>
   </head>
@@ -30,7 +30,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="/about-us">About Us</a>
               </li>
               <li class="nav-item">
@@ -61,16 +61,50 @@
         <div class='site-content'>
           <div class="d-flex justify-content-center">
             <div class="d-flex flex-column align-items-center text-center">
-              <img class='img' src='/images/frown.png'>
               <h1 class="site-title">
-                404
+                New Post About
               </h1>
-              <h4>Page Not Found</h4>
-              <p>The page you are looking for doesn't exist</p>
             </div>
           </div>
         </div>
       </div >
+
+      <div class="section-1">
+        <div class="container px-5">
+          <form method="POST" action="/activity" enctype="multipart/form-data">
+
+            <div class="form-group">
+              <label for="title" class='font-weight-bold'>Input a title</label>
+              <input type="text" class="form-control" id="title" name='title'>
+            </div>
+
+            <p class='font-weight-bold'>Upload image</p>
+            <div class="input-group mb-3">
+              <div class="custom-file">
+                <input type="file" class="custom-file-input" id="customFile" accept="image/*" name="image" >
+                <label class="custom-file-label" for="customFile">Choose file</label>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="video" class='font-weight-bold'>Input an embed video url</label>
+              <input type="text" class="form-control" id="video" name='video'>
+            </div>
+
+            <div class="form-group">
+              <label for="file" class='font-weight-bold'>Input a download file url</label>
+              <input type="text" class="form-control" id="file" name='file'>
+            </div>
+
+            <div class="form-group">
+                <label for="newDescription" class="font-weight-bold">Content Put Here</label>
+                <textarea name="content" class="form-control" id="newDescription" required cols="30" rows="10"></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+      </div>
     </main>
 
     <footer>
@@ -112,6 +146,10 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
+      $(".custom-file-input").on("change", function() {
+        var fileName = $(this).val().split("\\").pop();
+        $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
+      });
     </script>
   </body>
 </html>
