--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel='stylesheet' href="/styles/myStyle.css" >
+    <link rel='stylesheet' href="/styles/index.css" >
 
     <title>Beautiful Pangalengan</title>
   </head>
@@ -31,16 +31,16 @@
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link" href="/about-us">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Activity</a>
+                <a class="nav-link" href="/activity">Activity</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tourist Attraction</a>
+                <a class="nav-link" href="/tourist-attraction">Tourist Attraction</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Gallery</a>
+                <a class="nav-link" href="/gallery">Gallery</a>
               </li>
             </ul>
             <ul class="navbar-nav justify-content-end">
@@ -146,7 +146,7 @@
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-12 col-md-6">
-              <img data-aos="fade-right" data-aos-duration="1000" class='img' src='https://www.knetizen.com/wp-content/uploads/2019/10/IZONE-Jo-Yuri.jpg'>
+              <img data-aos="fade-right" data-aos-duration="1000" class='img' src='/images/nature.svg'>
             </div>
             <div class="col-12 col-md-6">
               <h1 class='heading-3'>Why you should visit pangalengan?</h1>
@@ -164,14 +164,13 @@
             <h4>Contact Us!</h4>
             <div class="sosmed">
               <a href='/'>
-                <img src="images/ig.png" alt="ig">
+                <img src="/images/ig.png" alt="ig">
               </a>
               <a href='/'>
-                <img src="images/fb.png" alt="ig">
+                <img src="/images/fb.png" alt="ig">
               </a>
             </div>
-            <p class='param-footer'>Designed and built with all the love in the world by the Wayang Windu team with the help of our contributors</p>
-            <p class='param-footer'>All right reserved. Pangalengan</p>
+            <p class='param-footer'>Designed and built with all the love in the world by Farand from the Wayang Windu KKN team with the help of our contributors. All right reserved. Pangalengan</p>
           </div>
           <div class="col-12 col-lg-4 order-1 order-lg-2 pb-1 justify-content-end">
             <h4>Our Location</h4>
@@ -183,11 +182,7 @@
             </div>
           </div>
         </div>
-        
 
-
-
-        
       </div>
     </footer>
 
