--- a/public/styles/about/index.css
+++ b/public/styles/about/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Pacifico&family=Righteous&family=Roboto+Condensed:wght@700&family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Pacifico&family=Montserrat&family=Righteous&family=Roboto+Condensed&family=Ubuntu&display=swap');
 
 body {
 	margin: 79px 0 0 0;
@@ -23,7 +23,6 @@ body {
 	margin: 15px;
 	color: black !important;
 	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 700;
 }
 
 .nav-link:hover {
@@ -41,23 +40,15 @@ body {
 	padding: 4% 0;
 }
 
-.site-title,
-.site-desc {
-	color: #fbc49c;
-	font-family: Righteous, sans-serif;
-}
-
 .site-title {
+	color: #fdede2;
+	font-family: Righteous, sans-serif;
 	font-size: 50px;
-}
-
-.site-desc {
-	font-size: 20px;
 }
 
 /* section 1 */
 .section-1 {
-	width: 50%;
+	width: 70%;
 	margin: 0 auto;
 	padding: 5% 0;
 }
