--- a/public/styles/activity/index.css
+++ b/public/styles/activity/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Pacifico&family=Righteous&family=Roboto+Condensed:wght@700&family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Pacifico&family=Montserrat&family=Righteous&family=Roboto+Condensed&family=Ubuntu&display=swap');
 
 body {
 	margin: 79px 0 0 0;
@@ -23,7 +23,6 @@ body {
 	margin: 15px;
 	color: black !important;
 	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 700;
 }
 
 .nav-link:hover {
@@ -43,7 +42,7 @@ body {
 
 .site-title,
 .site-desc {
-	color: #fbc49c;
+	color: #fdede2;
 	font-family: Righteous, sans-serif;
 }
 
