--- a/public/styles/activity/show.css
+++ b/public/styles/activity/show.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Pacifico&family=Righteous&family=Roboto+Condensed:wght@700&family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Pacifico&family=Montserrat&family=Righteous&family=Roboto+Condensed&family=Ubuntu&display=swap');
 
 body {
 	margin: 79px 0 0 0;
@@ -23,7 +23,6 @@ body {
 	margin: 15px;
 	color: black !important;
 	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 700;
 }
 
 .nav-link:hover {
@@ -43,7 +42,7 @@ body {
 
 .site-title,
 .site-desc {
-	color: #fbc49c;
+	color: #fdede2;
 	font-family: Righteous, sans-serif;
 }
 
@@ -59,7 +58,7 @@ body {
 .section-1 {
 	padding: 5% 0;
 	margin: 0 auto;
-	width: 50%;
+	width: 70%;
 }
 
 .section-1 .img {
@@ -75,15 +74,50 @@ body {
 }
 
 .section-1 .vid {
-	width: 100%;
-	height: 400px;
+	width: 800px;
+	height: 450px;
 	margin: 5% auto;
 	display: block;
 }
 
 .section-1 .video {
-	width: 100%;
-	height: 400px;
+	width: 800px;
+	height: 450px;
+}
+
+/* On screens that are 992px wide or less, the background color is blue */
+@media screen and (max-width: 1200px) {
+	.section-1 .video {
+		width: 400px;
+		height: 200px;
+	}
+	.section-1 .vid {
+		width: 400px;
+		height: 200px;
+	}
+}
+
+@media screen and (max-width: 700px) {
+	.section-1 .video {
+		width: 350px;
+		height: 150px;
+	}
+	.section-1 .vid {
+		width: 350px;
+		height: 150px;
+	}
+}
+
+/* On screens that are 600px wide or less, the background color is olive */
+@media screen and (max-width: 500px) {
+	.section-1 .video {
+		width: 220px;
+		height: 120px;
+	}
+	.section-1 .vid {
+		width: 220px;
+		height: 120px;
+	}
 }
 
 .section-1 .button {
