--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Pacifico&family=Righteous&family=Roboto+Condensed:wght@700&family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Pacifico&family=Montserrat&family=Righteous&family=Roboto+Condensed&family=Ubuntu&display=swap');
 
 body {
 	margin: 79px 0 0 0;
@@ -6,9 +6,9 @@ body {
 	font-family: Lato, sans-serif;
 }
 
-.no-border {
-	border: 0;
-	box-shadow: none; /* You may want to include this as bootstrap applies these styles too */
+html,
+body {
+	overflow-x: hidden;
 }
 
 /* navbar */
@@ -28,7 +28,6 @@ body {
 	margin: 15px;
 	color: black !important;
 	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 700;
 }
 
 .nav-link:hover {
@@ -44,13 +43,16 @@ body {
 .site-content {
 	background-image: url('../images/gunung1.png');
 	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 	padding: 18% 0;
 }
 
 .site-title,
 .site-desc {
-	color: #fbc49c;
-	font-family: Righteous, sans-serif;
+	color: white;
+	font-family: Montserrat, sans-serif;
 }
 
 .site-title {
@@ -65,7 +67,12 @@ hr.site-hr {
 	border: 0;
 	height: 1px;
 	width: 80%;
-	background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)) !important;
+	background-image: linear-gradient(
+		to right,
+		rgba(0, 0, 0, 0),
+		rgba(255, 255, 255, 0.75),
+		rgba(0, 0, 0, 0)
+	) !important;
 }
 
 /* section 1 */
@@ -74,8 +81,8 @@ hr.site-hr {
 }
 
 .section-1 .card {
-	background-color: #ddc1ab;
-	border: 3px solid #ddc1ab;
+	background-color: #d3c1b4;
+	border: 3px solid #d3c1b4;
 	margin-bottom: 5%;
 }
 
@@ -114,7 +121,7 @@ hr.site-hr {
 	width: 100%;
 	height: 40%;
 	object-fit: cover;
-	border: 3px solid #ddc1ab;
+	border: 3px solid #d3c1b4;
 }
 
 .section-2 .content {
