--- a/views/activity/new.ejs
+++ b/views/activity/new.ejs
@@ -12,7 +12,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel='stylesheet' href="/styles/about/new.css" >
+    <link rel='stylesheet' href="/styles/activity/new.css" >
 
     <title>Beautiful Pangalengan</title>
   </head>
@@ -30,10 +30,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="/about-us">About Us</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="/activity">Activity</a>
               </li>
               <li class="nav-item">
@@ -43,7 +43,7 @@
                 <a class="nav-link" href="/gallery">Gallery</a>
               </li>
             </ul>
-            <ul class="navbar-nav justify-content-end">
+            <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" href="#">Sign In <span class="sr-only">(current)</span></a>
               </li>
