--- a/views/activity/show.ejs
+++ b/views/activity/show.ejs
@@ -43,7 +43,7 @@
                 <a class="nav-link" href="/gallery">Gallery</a>
               </li>
             </ul>
-            <ul class="navbar-nav justify-content-end">
+            <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" href="#">Sign In <span class="sr-only">(current)</span></a>
               </li>
@@ -72,7 +72,7 @@
       <div class="section-1">
         <div class="container">
           <img class='img' src="data:image/<%= post.image.contentType%>;base64,<%= post.image.data.toString('base64')%>">
-          <p class='para-1 my-5'><%= post.content %></p>
+          <p class='para-1 my-2'><%= post.content %></p>
           <% if(post.video === 'false') { %>
             <% null %>
           <% } else { %>
@@ -83,8 +83,14 @@
           <% if(post.file === 'false') { %>
             <% null %>
           <%} else { %>    
-            <a href='<%= post.file %>' class='btn button d-block'>Download File</a>
+            <a href='<%= post.file %>' class='btn button d-block mb-2'>Download File</a>
           <% }%>
+          <div class="d-flex flex-row justify-content-end">
+            <a class='btn btn-primary rounded-0' href='/activity/<%=post._id%>/edit'>Edit Post</a>
+            <form action="/activity/<%= post._id %>?_method=DELETE" method="POST">
+              <button class="btn btn-danger rounded-0">Delete Post</button>
+            </form>
+          </div>
         </div>
       </div>
     </main>
