--- a/public/styles/activity/show.css
+++ b/public/styles/activity/show.css
@@ -6,6 +6,11 @@ body {
 	font-family: Lato, sans-serif;
 }
 
+html,
+body {
+	overflow-x: hidden;
+}
+
 /* navbar */
 
 .navbar {
@@ -48,6 +53,7 @@ body {
 
 .site-title {
 	font-size: 50px;
+	text-transform: capitalize;
 }
 
 .site-desc {
@@ -82,41 +88,44 @@ body {
 
 .section-1 .video {
 	width: 800px;
-	height: 450px;
+	height: 480px;
 }
 
 /* On screens that are 992px wide or less, the background color is blue */
 @media screen and (max-width: 1200px) {
 	.section-1 .video {
 		width: 400px;
-		height: 200px;
+		height: 300px;
 	}
 	.section-1 .vid {
 		width: 400px;
-		height: 200px;
+		height: 300px;
 	}
 }
 
 @media screen and (max-width: 700px) {
 	.section-1 .video {
 		width: 350px;
-		height: 150px;
+		height: 250px;
 	}
 	.section-1 .vid {
 		width: 350px;
-		height: 150px;
+		height: 250px;
 	}
 }
 
 /* On screens that are 600px wide or less, the background color is olive */
 @media screen and (max-width: 500px) {
+	.section-1 {
+		width: 95%;
+	}
 	.section-1 .video {
-		width: 220px;
-		height: 120px;
+		width: 300px;
+		height: 200px;
 	}
 	.section-1 .vid {
-		width: 220px;
-		height: 120px;
+		width: 300px;
+		height: 200px;
 	}
 }
 
@@ -133,12 +142,12 @@ body {
 /* footer */
 .footer {
 	background-color: #e9e4e1;
-	padding: 5% 2%;
+	padding: 2% 2%;
 }
 
 .footer .param-footer {
 	margin-bottom: 0;
-	margin-top: 0.5%;
+	margin-top: 5%;
 }
 
 .footer .mapouter {
@@ -153,12 +162,8 @@ body {
 	height: 250px;
 	width: 350px;
 }
-.footer .sosmed {
-	margin-bottom: 20px;
-}
 
-@media (min-width: 1080px) {
-	.footer .sosmed {
-		margin-bottom: 120px;
-	}
+.footer .sponsor-img {
+	width: 50px;
+	height: 50px;
 }
