--- a/public/styles/404.css
+++ b/public/styles/404.css
@@ -57,12 +57,12 @@ body {
 /* footer */
 .footer {
 	background-color: #e9e4e1;
-	padding: 5% 2%;
+	padding: 2% 2%;
 }
 
 .footer .param-footer {
 	margin-bottom: 0;
-	margin-top: 0.5%;
+	margin-top: 5%;
 }
 
 .footer .mapouter {
@@ -77,12 +77,8 @@ body {
 	height: 250px;
 	width: 350px;
 }
-.footer .sosmed {
-	margin-bottom: 20px;
-}
 
-@media (min-width: 1080px) {
-	.footer .sosmed {
-		margin-bottom: 120px;
-	}
+.footer .sponsor-img {
+	width: 50px;
+	height: 50px;
 }
