--- a/public/styles/about/edit.css
+++ b/public/styles/about/edit.css
@@ -6,6 +6,11 @@ body {
 	font-family: Lato, sans-serif;
 }
 
+html,
+body {
+	overflow-x: hidden;
+}
+
 /* navbar */
 
 .navbar {
@@ -66,15 +71,21 @@ body {
 	padding: 0;
 }
 
+@media screen and (max-width: 500px) {
+	.section-1 .img {
+		width: 20%;
+	}
+}
+
 /* footer */
 .footer {
 	background-color: #e9e4e1;
-	padding: 5% 2%;
+	padding: 2% 2%;
 }
 
 .footer .param-footer {
 	margin-bottom: 0;
-	margin-top: 0.5%;
+	margin-top: 5%;
 }
 
 .footer .mapouter {
@@ -89,12 +100,8 @@ body {
 	height: 250px;
 	width: 350px;
 }
-.footer .sosmed {
-	margin-bottom: 20px;
-}
 
-@media (min-width: 1080px) {
-	.footer .sosmed {
-		margin-bottom: 120px;
-	}
+.footer .sponsor-img {
+	width: 50px;
+	height: 50px;
 }
