--- a/views/404.ejs
+++ b/views/404.ejs
@@ -57,7 +57,7 @@
     </header>
 
     <main>
-      <div class='container-fluid p-0'>
+      <div class='container p-0'>
         <div class='site-content'>
           <div class="d-flex justify-content-center">
             <div class="d-flex flex-column align-items-center text-center">
@@ -76,9 +76,9 @@
     <footer>
       <div class="container-fluid footer">
         <div class="row justify-content-between align-items-start">
-          <div class="col-12 col-lg-8 order-2 order-lg-1 pb-1">
+          <div class="col-12 col-lg-8 order-2 order-lg-1 my-2 text-center">
             <h4>Contact Us!</h4>
-            <div class="sosmed">
+            <div class="mb-2">
               <a href='/'>
                 <img src="/images/ig.png" alt="ig">
               </a>
@@ -86,7 +86,14 @@
                 <img src="/images/fb.png" alt="ig">
               </a>
             </div>
-            <p class='param-footer'>Designed and built with all the love in the world by Farand from the Wayang Windu KKN team with the help of our contributors. All right reserved. Pangalengan</p>
+            <p class='param-footer'>Designed and built with all the love in the world by Farand from the Wayang Windu KKN team and with the help of our contributors. All right reserved. Pangalengan</p>
+            <div class="my-2">
+              <img src="/images/ugm.png" alt="ugm" class='sponsor-img'>
+              <img src="/images/kkn-ppm.png" alt="kkn-ppm" class='sponsor-img'>
+              <img src="/images/ww.png" alt="ww" class='sponsor-img'>
+              <img src="/images/se.png" alt="se" class='sponsor-img'>
+              <img src="/images/geothermal.png" alt="geothermal" class='sponsor-img'>
+            </div>
           </div>
           <div class="col-12 col-lg-4 order-1 order-lg-2 pb-1 justify-content-end">
             <h4>Our Location</h4>
@@ -101,7 +108,7 @@
 
       </div>
     </footer>
-
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
