--- a/views/activity/index.ejs
+++ b/views/activity/index.ejs
@@ -57,23 +57,21 @@
     </header>
 
     <main>
-      <div class='container-fluid p-0'>
-        <div class='site-content'>
-          <div class="d-flex justify-content-center">
-            <div class="d-flex flex-column align-items-center text-center">
-              <h1 class="site-title">
-                Activity
-              </h1>
-            </div>
+      <div class='site-content'>
+        <div class="d-flex justify-content-center">
+          <div class="d-flex flex-column align-items-center text-center">
+            <h1 class="site-title">
+              Activity
+            </h1>
           </div>
-        </div>
+      </div>
       </div >
 
       <div class="section-1">
         <div class="container-fluid">
           <div class="row justify-content-center align-items-start">
-            <div class="col-12 col-lg-8 order-2 order-lg-1 activity">
-              <a href='/activity/new' class='btn button d-block mb-2'>New Post</a>
+            <div class="col-12 col-lg-8 order-2 order-lg-1 activity" id='activity'>
+              <a href='/activity/new' class='btn button d-block my-1 my-lg-5'>New Post</a>
               <% posts.forEach((post) => { %>
                 <div class="activity">
                   <h1 class='heading-1'><%= post.title %></h1>
@@ -85,25 +83,29 @@
               <% }) %>
             </div>
             <div class="col-12 col-lg-4 order-1 order-lg-2">
-              <form class="form-inline">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              <form class="form-inline justify-content-center my-3 my-lg-5" method="POST" action="/activity/search">
+                  <input class="form-control mr-sm-2 search-input" type="text" placeholder="Search" name='search'>
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
               </form>
-              <h5 class='pt-5'>For you</h5>
-              <div class="card my-3" style="width: 18rem;">
-                <img src="https://www.knetizen.com/wp-content/uploads/2019/10/IZONE-Jo-Yuri.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-              <div class="card my-3" style="width: 18rem;">
-                <img src="https://www.knetizen.com/wp-content/uploads/2019/10/IZONE-Jo-Yuri.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+              <div class="d-none d-lg-block">
+                <div class="randomactivity pb-5">
+                  <h5>For you</h5>
+                  <div class="card my-3" style="width: 18rem;">
+                    <img src='data:image/<%= random1.image.contentType%>;base64,<%= random1.image.data.toString('base64')%>' class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title"><%= random1.title %></h5>
+                      <p class="card-text"><%= random1.content.slice(0,50) %> ...</p>
+                      <a href="/activity/<%= random1._id %>" class="btn btn-primary">Read More</a>
+                    </div>
+                  </div>
+                  <div class="card my-3" style="width: 18rem;">
+                    <img src='data:image/<%= random2.image.contentType%>;base64,<%= random2.image.data.toString('base64')%>' class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title"><%= random2.title %></h5>
+                      <p class="card-text"><%= random2.content.slice(0,50) %> ...</p>
+                      <a href="/activity/<%= random2._id %>" class="btn btn-primary">Read More</a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -115,9 +117,9 @@
     <footer>
       <div class="container-fluid footer">
         <div class="row justify-content-between align-items-start">
-          <div class="col-12 col-lg-8 order-2 order-lg-1 pb-1">
+          <div class="col-12 col-lg-8 order-2 order-lg-1 my-2 text-center">
             <h4>Contact Us!</h4>
-            <div class="sosmed">
+            <div class="mb-2">
               <a href='/'>
                 <img src="/images/ig.png" alt="ig">
               </a>
@@ -125,7 +127,14 @@
                 <img src="/images/fb.png" alt="ig">
               </a>
             </div>
-            <p class='param-footer'>Designed and built with all the love in the world by Farand from the Wayang Windu KKN team with the help of our contributors. All right reserved. Pangalengan</p>
+            <p class='param-footer'>Designed and built with all the love in the world by Farand from the Wayang Windu KKN team and with the help of our contributors. All right reserved. Pangalengan</p>
+            <div class="my-2">
+              <img src="/images/ugm.png" alt="ugm" class='sponsor-img'>
+              <img src="/images/kkn-ppm.png" alt="kkn-ppm" class='sponsor-img'>
+              <img src="/images/ww.png" alt="ww" class='sponsor-img'>
+              <img src="/images/se.png" alt="se" class='sponsor-img'>
+              <img src="/images/geothermal.png" alt="geothermal" class='sponsor-img'>
+            </div>
           </div>
           <div class="col-12 col-lg-4 order-1 order-lg-2 pb-1 justify-content-end">
             <h4>Our Location</h4>
