--- a/views/index.ejs
+++ b/views/index.ejs
@@ -161,9 +161,9 @@
     <footer>
       <div class="container-fluid footer">
         <div class="row justify-content-between align-items-start">
-          <div class="col-12 col-lg-8 order-2 order-lg-1 pb-1">
+          <div class="col-12 col-lg-8 order-2 order-lg-1 my-2 text-center">
             <h4>Contact Us!</h4>
-            <div class="sosmed">
+            <div class="mb-2">
               <a href='/'>
                 <img src="/images/ig.png" alt="ig">
               </a>
@@ -171,7 +171,14 @@
                 <img src="/images/fb.png" alt="ig">
               </a>
             </div>
-            <p class='param-footer'>Designed and built with all the love in the world by Farand from the Wayang Windu KKN team with the help of our contributors. All right reserved. Pangalengan</p>
+            <p class='param-footer'>Designed and built with all the love in the world by Farand from the Wayang Windu KKN team and with the help of our contributors. All right reserved. Pangalengan</p>
+            <div class="my-2">
+              <img src="/images/ugm.png" alt="ugm" class='sponsor-img'>
+              <img src="/images/kkn-ppm.png" alt="kkn-ppm" class='sponsor-img'>
+              <img src="/images/ww.png" alt="ww" class='sponsor-img'>
+              <img src="/images/se.png" alt="se" class='sponsor-img'>
+              <img src="/images/geothermal.png" alt="geothermal" class='sponsor-img'>
+            </div>
           </div>
           <div class="col-12 col-lg-4 order-1 order-lg-2 pb-1 justify-content-end">
             <h4>Our Location</h4>
