--- a/views/about/index.ejs
+++ b/views/about/index.ejs
@@ -8,9 +8,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <!-- AOS -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
     <!-- Custom CSS -->
     <link rel='stylesheet' href="/styles/about/index.css" >
 
@@ -43,13 +40,22 @@
                 <a class="nav-link" href="/gallery">Gallery</a>
               </li>
             </ul>
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Sign In <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Sign Up <span class="sr-only">(current)</span></a>
-              </li>
+            <ul class="navbar-nav justify-content-end">
+              <% if(!currentUser) { %>
+                <li class="nav-item">
+                  <a href="/login" class="nav-link">Login</a>
+                </li>
+                <li class="nav-item">
+                  <a href="/register" class="nav-link">Register</a>
+                </li>
+              <% }else{ %>
+                <li class="nav-item">
+                  <a href="/profile/<%= currentUser._id %>" class="nav-link">Signed in As <%= currentUser.username %> </a>
+                </li>
+                <li class="nav-item">
+                  <a href="/logout" class="nav-link">Log Out</a>
+                </li>
+              <% } %>
             </ul>
           </div>
         </div>
@@ -66,6 +72,28 @@
           </div>
         </div>
       </div>
+
+      <% if(success && success.length>0 ){ %>
+        <div class="container my-3">
+          <div class="alert alert-success " role="alert">
+              <%= success %>
+          </div>
+        </div>
+      <% } %>
+      <% if(warning && warning.length>0){ %>
+        <div class="container my-3">
+          <div class="alert alert-warning " role="alert">
+              <%= warning %>
+          </div>
+        </div>
+      <% } %>
+      <% if (error && error.length>0){ %>
+        <div class="container my-3">
+          <div class="alert alert-danger " role="alert">
+              <%= error %>
+          </div>
+        </div>
+      <% } %>
 
       <div class="section-1">
         <div class="container">
@@ -120,10 +148,5 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-    <!-- AOS -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
   </body>
 </html>
