--- a/views/partials/template.ejs
+++ b/views/partials/template.ejs
@@ -8,8 +8,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!-- Custom CSS -->
-    <link rel='stylesheet' href="/styles/404.css" >
+    <link rel='stylesheet' href="/styles/about/index.css" >
 
     <title>Beautiful Pangalengan</title>
   </head>
@@ -27,7 +30,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="/about-us">About Us</a>
               </li>
               <li class="nav-item">
@@ -40,20 +43,20 @@
                 <a class="nav-link" href="/gallery">Gallery</a>
               </li>
             </ul>
-            <ul class="navbar-nav justify-content-end">
+            <ul class="navbar-nav">
               <% if(!currentUser) { %>
                 <li class="nav-item">
-                  <a href="/login" class="nav-link">Login</a>
+                    <a href="/login" class="nav-link">Login</a>
                 </li>
                 <li class="nav-item">
-                  <a href="/register" class="nav-link">Register</a>
+                    <a href="/register" class="nav-link">Register</a>
                 </li>
               <% }else{ %>
                 <li class="nav-item">
-                  <a href="/profile/<%= currentUser._id %>" class="nav-link">Signed in As <%= currentUser.username %> </a>
+                    <a href="/profile/<%= currentUser._id %>" class="nav-link">Signed in As <%= currentUser.username %> </a>
                 </li>
                 <li class="nav-item">
-                  <a href="/logout" class="nav-link">Log Out</a>
+                        <a href="/logout" class="nav-link">Log Out</a>
                 </li>
               <% } %>
             </ul>
@@ -62,43 +65,41 @@
       </nav>
     </header>
 
-    <% if(success && success.length>0 ){ %>
-      <div class="container my-3">
-        <div class="alert alert-success " role="alert">
-            <%= success %>
-        </div>
-      </div>
-    <% } %>
-    <% if(warning && warning.length>0){ %>
-      <div class="container my-3">
-        <div class="alert alert-warning " role="alert">
-            <%= warning %>
-        </div>
-      </div>
-    <% } %>
-    <% if (error && error.length>0){ %>
-      <div class="container my-3">
-        <div class="alert alert-danger " role="alert">
-            <%= error %>
-        </div>
-      </div>
-    <% } %>
-
     <main>
-      <div class='container p-0'>
-        <div class='site-content'>
-          <div class="d-flex justify-content-center">
-            <div class="d-flex flex-column align-items-center text-center">
-              <img class='img' src='/images/frown.png'>
-              <h1 class="site-title">
-                404
-              </h1>
-              <h4>Page Not Found</h4>
-              <p>The page you are looking for doesn't exist</p>
-            </div>
+      <div class='site-content'>
+        <div class="d-flex justify-content-center">
+          <div class="d-flex flex-column align-items-center text-center">
+            <h1 class="site-title">
+              All About Pangalengan
+            </h1>
           </div>
         </div>
-      </div >
+      </div>
+
+      <% if(success && success.length>0 ){ %>
+        <div class="container my-3">
+          <div class="alert alert-success " role="alert">
+              <%= success %>
+          </div>
+        </div>
+      <% } %>
+      <% if(warning && warning.length>0){ %>
+        <div class="container my-3">
+          <div class="alert alert-warning " role="alert">
+              <%= warning %>
+          </div>
+        </div>
+      <% } %>
+      <% if (error && error.length>0){ %>
+        <div class="container my-3">
+          <div class="alert alert-danger " role="alert">
+              <%= error %>
+          </div>
+        </div>
+      <% } %>
+
+      <!-- input ure content -->
+      
     </main>
 
     <footer>
@@ -136,11 +137,17 @@
 
       </div>
     </footer>
-    
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
