--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <link rel='stylesheet' href="/styles/404.css" >
+    <link rel='stylesheet' href="/styles/about/index.css" >
 
     <title>Beautiful Pangalengan</title>
   </head>
@@ -62,43 +62,42 @@
       </nav>
     </header>
 
-    <% if(success && success.length>0 ){ %>
-      <div class="container my-3">
-        <div class="alert alert-success " role="alert">
-            <%= success %>
-        </div>
-      </div>
-    <% } %>
-    <% if(warning && warning.length>0){ %>
-      <div class="container my-3">
-        <div class="alert alert-warning " role="alert">
-            <%= warning %>
-        </div>
-      </div>
-    <% } %>
-    <% if (error && error.length>0){ %>
-      <div class="container my-3">
-        <div class="alert alert-danger " role="alert">
-            <%= error %>
-        </div>
-      </div>
-    <% } %>
-
     <main>
-      <div class='container p-0'>
-        <div class='site-content'>
-          <div class="d-flex justify-content-center">
-            <div class="d-flex flex-column align-items-center text-center">
-              <img class='img' src='/images/frown.png'>
-              <h1 class="site-title">
-                404
-              </h1>
-              <h4>Page Not Found</h4>
-              <p>The page you are looking for doesn't exist</p>
-            </div>
+      <div class='site-content'>
+        <div class="d-flex justify-content-center">
+          <div class="d-flex flex-column align-items-center text-center">
+            <h1 class="site-title">
+              All About Pangalengan
+            </h1>
           </div>
         </div>
-      </div >
+      </div>
+
+      <% if(success && success.length>0 ){ %>
+        <div class="container my-3">
+          <div class="alert alert-success " role="alert">
+              <%= success %>
+          </div>
+        </div>
+      <% } %>
+      <% if(warning && warning.length>0){ %>
+        <div class="container my-3">
+          <div class="alert alert-warning " role="alert">
+              <%= warning %>
+          </div>
+        </div>
+      <% } %>
+      <% if (error && error.length>0){ %>
+        <div class="container my-3">
+          <div class="alert alert-danger " role="alert">
+              <%= error %>
+          </div>
+        </div>
+      <% } %>
+
+      <!-- input ure content -->
+      <h1>profile home page</h1>
+      
     </main>
 
     <footer>
@@ -136,11 +135,12 @@
 
       </div>
     </footer>
-    
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
   </body>
 </html>
