add tourist page n some refactor

--- a/views/activity/edit.ejs
+++ b/views/activity/edit.ejs
@@ -105,7 +105,7 @@
             </div>
 
             <p class='font-weight-bold mb-1'>Upload image</p>
-            <p>Your current image :</p>
+            <p class='para-1'>Your current image :</p>
             <img class='img pb-2 pb-lg-4' src="data:image/<%= post.image.contentType%>;base64,<%= post.image.data.toString('base64')%>"> 
             <div class="input-group mb-3">
               <div class="custom-file">
