--- a/views/tourist/index.ejs
+++ b/views/tourist/index.ejs
@@ -8,8 +8,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!-- Custom CSS -->
-    <link rel='stylesheet' href="/styles/activity/index.css" >
+    <link rel='stylesheet' href="/styles/tourist/index.css" >
 
     <title>Beautiful Pangalengan</title>
   </head>
@@ -30,30 +33,30 @@
               <li class="nav-item">
                 <a class="nav-link" href="/about-us">About Us</a>
               </li>
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="/activity">Activity</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="/tourist-attraction">Tourist Attraction</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/gallery">Gallery</a>
               </li>
             </ul>
-            <ul class="navbar-nav justify-content-end">
+            <ul class="navbar-nav">
               <% if(!currentUser) { %>
                 <li class="nav-item">
-                  <a href="/login" class="nav-link">Login</a>
+                    <a href="/login" class="nav-link">Login</a>
                 </li>
                 <li class="nav-item">
-                  <a href="/register" class="nav-link">Register</a>
+                    <a href="/register" class="nav-link">Register</a>
                 </li>
               <% }else{ %>
                 <li class="nav-item">
-                  <a href="/profile/<%= currentUser._id %>" class="nav-link">Signed in As <%= currentUser.username %> </a>
+                    <a href="/profile/<%= currentUser._id %>" class="nav-link">Signed in As <%= currentUser.username %> </a>
                 </li>
                 <li class="nav-item">
-                  <a href="/logout" class="nav-link">Log Out</a>
+                        <a href="/logout" class="nav-link">Log Out</a>
                 </li>
               <% } %>
             </ul>
@@ -67,11 +70,11 @@
         <div class="d-flex justify-content-center">
           <div class="d-flex flex-column align-items-center text-center">
             <h1 class="site-title">
-              Activity
+              Tourist Attraction
             </h1>
           </div>
+        </div>
       </div>
-      </div >
 
       <% if(success && success.length>0 ){ %>
         <div class="container my-3">
@@ -95,68 +98,47 @@
         </div>
       <% } %>
 
-      <div class="section-1">
-        <div class="container-fluid">
-          <div class="row justify-content-center align-items-start">
-            <div class="col-12 col-lg-8 order-2 order-lg-1 activity" id='activity'>
-              <a href='/activity/new' class='btn button my-1 my-lg-5'>New Post</a>
-              <% if(posts){ %>
-                <% posts.forEach((post) => { %>
-                  <div class="activity">
-                    <h1 class='heading-1'><%= post.title %></h1>
-                    <% if(post.image) { %>
-                      <img src="data:image/<%= post.image.contentType%>;base64,<%= post.image.data.toString('base64')%>" class="card-img-top" alt="images">
-                    <% } else{ %>
-                      <img src="/images/emptypic.png" class="card-img-top" alt="images">
-                    <% } %>
-                    <p class='para-1'><%= post.content.slice(0,250) %> ...</p>
-                    <div class="d-flex flex-row justify-content-end">
-                      <a href='/activity/<%= post._id %>' class='btn btn-primary'>Read More</a>
-                    </div>
-                    <hr class='rules'>
-                  </div>
-                <% }) %>
-              <% } %>
-            </div>
-            <div class="col-12 col-lg-4 order-1 order-lg-2">
-              <form class="form-inline justify-content-center my-3 my-lg-5" method="POST" action="/activity/search">
-                  <input class="form-control mr-sm-2 search-input" type="text" placeholder="Search" name='search'>
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
-              <div class="d-none d-lg-block">
-                <div class="randomactivity pb-5">
-                  <h5>For you</h5>
-                  <% if(random1) { %>
-                    <div class="card my-3" style="width: 18rem;">
-                      <% if(random1.image) { %>
-                        <img src='data:image/<%= random1.image.contentType%>;base64,<%= random1.image.data.toString('base64')%>' class="card-img-top" alt="...">
-                      <% } else{ %>
-                        <img src="/images/emptypic.png" class="card-img-top" alt="images">
-                      <% } %>
-                      <div class="card-body">
-                        <a href="/activity/<%= random1._id %>"> <h5 class="card-title"><%= random1.title %></h5></a>
-                        <p class="card-text"><%= random1.content.slice(0,50) %> ...</p>
-                      </div>
-                    </div>
-                  <% } %>
+      <!-- input ure content -->
+      <div class="navigasi container my-3 my-lg-5">
+        <ul class="nav nav-tabs">
+          <li class="nav-item">
+            <a class="nav-link px-2 px-lg-5 active" href="/tourist-attraction">All</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-1 px-lg-5" href="/tourist-attraction/attraction">Attraction</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-1 px-lg-5" href="/tourist-attraction/lodging">Lodging</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-1 px-lg-5" href="/tourist-attraction/restaurant">Restaurant</a>
+          </li>
+        </ul>
+      </div>
 
-                  <% if(random2) { %>
-                    <div class="card my-3" style="width: 18rem;">
-                      <% if(random2.image) { %>
-                        <img src='data:image/<%= random2.image.contentType%>;base64,<%= random2.image.data.toString('base64')%>' class="card-img-top" alt="...">
-                      <% } else{ %>
-                        <img src="/images/emptypic.png" class="card-img-top" alt="images">
-                      <% } %>
-                      <div class="card-body">
-                        <a href="/activity/<%= random2._id %>"><h5 class="card-title"><%= random2.title %></h5></a>
-                        <p class="card-text"><%= random2.content.slice(0,50) %> ...</p>
-                      </div>
-                    </div>
+      <div class="section-1 container">
+        <a id="myBtn" class= 'btn btn-primary' href='/tourist-attraction/new'>New Post</a>
+        <div class="row justify-content-center align-items-center">
+
+          <% if(posts){ %>
+            <% posts.forEach(post=>{ %>
+              <div class="col-12 col-md-6 col-lg-4 justify-content-center align-items-center">
+                <div class="card" style="width: 18rem;">
+                  <% if(post.image) { %>
+                    <img src="data:image/<%= post.image[0].contentType%>;base64,<%= post.image[0].data.toString('base64')%>" class="card-img-top" alt="images">
+                  <% } else{ %>
+                    <img src="/images/emptypic.png" class="card-img-top" alt="images">
                   <% } %>
+                  <div class="card-body">
+                      <a href='/tourist-attraction/<%=post._id%>'> <h5 class="card-title"> <%= post.title %></h5> </a>
+                      <p class="card-text"><%= post.content.slice(0,150) %> ...</p>
+                      <p class='category'><%= post.category %></p>
+                  </div>
                 </div>
               </div>
-            </div>
-          </div>
+            <% }); %>
+          <% } %>
+          
         </div>
       </div>
     </main>
@@ -202,5 +184,11 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
