--- a/views/tourist/show.ejs
+++ b/views/tourist/show.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <link rel='stylesheet' href="/styles/activity/index.css" >
+    <link rel='stylesheet' href="/styles/tourist/show.css" >
 
     <title>Beautiful Pangalengan</title>
   </head>
@@ -30,10 +30,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="/about-us">About Us</a>
               </li>
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="/activity">Activity</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="/tourist-attraction">Tourist Attraction</a>
               </li>
               <li class="nav-item">
@@ -67,11 +67,11 @@
         <div class="d-flex justify-content-center">
           <div class="d-flex flex-column align-items-center text-center">
             <h1 class="site-title">
-              Activity
+              <%= post.title %>
             </h1>
           </div>
+        </div>
       </div>
-      </div >
 
       <% if(success && success.length>0 ){ %>
         <div class="container my-3">
@@ -96,67 +96,65 @@
       <% } %>
 
       <div class="section-1">
-        <div class="container-fluid">
-          <div class="row justify-content-center align-items-start">
-            <div class="col-12 col-lg-8 order-2 order-lg-1 activity" id='activity'>
-              <a href='/activity/new' class='btn button my-1 my-lg-5'>New Post</a>
-              <% if(posts){ %>
-                <% posts.forEach((post) => { %>
-                  <div class="activity">
-                    <h1 class='heading-1'><%= post.title %></h1>
-                    <% if(post.image) { %>
-                      <img src="data:image/<%= post.image.contentType%>;base64,<%= post.image.data.toString('base64')%>" class="card-img-top" alt="images">
-                    <% } else{ %>
-                      <img src="/images/emptypic.png" class="card-img-top" alt="images">
-                    <% } %>
-                    <p class='para-1'><%= post.content.slice(0,250) %> ...</p>
-                    <div class="d-flex flex-row justify-content-end">
-                      <a href='/activity/<%= post._id %>' class='btn btn-primary'>Read More</a>
-                    </div>
-                    <hr class='rules'>
-                  </div>
-                <% }) %>
-              <% } %>
-            </div>
-            <div class="col-12 col-lg-4 order-1 order-lg-2">
-              <form class="form-inline justify-content-center my-3 my-lg-5" method="POST" action="/activity/search">
-                  <input class="form-control mr-sm-2 search-input" type="text" placeholder="Search" name='search'>
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
-              <div class="d-none d-lg-block">
-                <div class="randomactivity pb-5">
-                  <h5>For you</h5>
-                  <% if(random1) { %>
-                    <div class="card my-3" style="width: 18rem;">
-                      <% if(random1.image) { %>
-                        <img src='data:image/<%= random1.image.contentType%>;base64,<%= random1.image.data.toString('base64')%>' class="card-img-top" alt="...">
-                      <% } else{ %>
-                        <img src="/images/emptypic.png" class="card-img-top" alt="images">
-                      <% } %>
-                      <div class="card-body">
-                        <a href="/activity/<%= random1._id %>"> <h5 class="card-title"><%= random1.title %></h5></a>
-                        <p class="card-text"><%= random1.content.slice(0,50) %> ...</p>
-                      </div>
-                    </div>
-                  <% } %>
+        <div class="container">
 
-                  <% if(random2) { %>
-                    <div class="card my-3" style="width: 18rem;">
-                      <% if(random2.image) { %>
-                        <img src='data:image/<%= random2.image.contentType%>;base64,<%= random2.image.data.toString('base64')%>' class="card-img-top" alt="...">
-                      <% } else{ %>
-                        <img src="/images/emptypic.png" class="card-img-top" alt="images">
-                      <% } %>
-                      <div class="card-body">
-                        <a href="/activity/<%= random2._id %>"><h5 class="card-title"><%= random2.title %></h5></a>
-                        <p class="card-text"><%= random2.content.slice(0,50) %> ...</p>
-                      </div>
-                    </div>
-                  <% } %>
+          <% if(post.image) { %>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+
+                <% for(let x=0;x<post.image.length;x++){ %>
+                  <div class="carousel-item <%= x== 0 ? 'active' : null %>">
+                    <img class='img' src="data:image/<%= post.image[x].contentType%>;base64,<%= post.image[x].data.toString('base64')%>">
+                  </div>
+                <% } %>
+
+              </div>
+  
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div> 
+          <% } else { %>
+            <img src="/images/emptypic.png" class="img" alt="images">
+          <% } %>
+
+          <p class='para-1 my-2'><%= post.content %></p>
+          <div class="d-flex flex-row justify-content-end">
+            <a class='btn btn-primary rounded-0' href='/tourist-attraction/<%= post._id %>/edit'>Edit Post</a>
+            <button type="button" class="btn btn-danger rounded-0" data-toggle="modal" data-target="#exampleModal">
+              Delete
+            </button>
+          </div>
+
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Delete post</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  Are you sure to delete this post?
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <form action="/tourist-attraction/<%= post._id %>?_method=DELETE" method="POST">
+                    <button class="btn btn-danger rounded-0">Delete Post</button>
+                  </form>
                 </div>
               </div>
             </div>
           </div>
+
+
         </div>
       </div>
     </main>
@@ -202,5 +200,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
   </body>
 </html>
